add: audio feature vectors extractor

--- a/scripts/audio_feature_extractor.ipynb
+++ b/scripts/audio_feature_extractor.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "6de2bc5d",
+   "id": "b4fe84f1",
    "metadata": {},
    "source": [
     "## Load dependencies"
@@ -10,8 +10,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "0edcb645",
+   "execution_count": 1,
+   "id": "d61873dc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,8 +20,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "5efe18ea",
+   "execution_count": 2,
+   "id": "422ccde1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6f3ac5e9",
+   "id": "3f329a90",
    "metadata": {},
    "source": [
     "## Load model weight and configs"
@@ -64,8 +64,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "942bd813",
+   "execution_count": 3,
+   "id": "3d19150c",
    "metadata": {},
    "outputs": [
     {
@@ -109,7 +109,7 @@
        " 'debug': False}"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -121,8 +121,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "df2c1d26",
+   "execution_count": 4,
+   "id": "5f2f8edd",
    "metadata": {},
    "outputs": [
     {
@@ -131,7 +131,7 @@
        "<All keys matched successfully>"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -148,7 +148,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8a79b6dd",
+   "id": "ae2daecd",
    "metadata": {},
    "source": [
     "## Load the dataset and dataloader"
@@ -156,13 +156,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "id": "4a96a042",
+   "execution_count": 13,
+   "id": "ac12a8d8",
    "metadata": {},
    "outputs": [],
    "source": [
-    "CSV_PATH = '/home/kvu/erc/data/raw-audios-wav/train.csv'\n",
-    "DATA_DIR = '/home/kvu/erc/data/raw-audios-wav/train/'\n",
+    "CSV_PATH = '/home/kvu/erc/data/raw-audios-wav/test.csv'\n",
+    "DATA_DIR = '/home/kvu/erc/data/raw-audios-wav/test/'\n",
     "\n",
     "dataset = AudioDataset(csv_path=CSV_PATH, data_dir=DATA_DIR, format='.wav', is_train=False, sr=22050, duration=8, n_mels=128)\n",
     "dataset_loader = DataLoader(dataset=dataset, batch_size=8, shuffle=False, pin_memory=False)"
@@ -170,29 +170,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "id": "e0fb77b7",
+   "execution_count": 14,
+   "id": "7094c6ba",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "torch.Size([3, 128, 345])"
+       "'dia136_utt0'"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "x, y = dataset[0]\n",
-    "x.shape"
+    "x, y, audio_id = dataset[0]\n",
+    "audio_id"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "e4930ca2",
+   "id": "2ea70b34",
    "metadata": {},
    "source": [
     "## Feature extractor"
@@ -200,8 +200,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "id": "8ac93f05",
+   "execution_count": 7,
+   "id": "f5c440d3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -210,74 +210,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "id": "27a393da",
+   "execution_count": 15,
+   "id": "3d7dbf9e",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "torch.Size([1, 3, 128, 345])"
-      ]
-     },
-     "execution_count": 17,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 2610/2610 [05:17<00:00,  8.22it/s]\n"
+     ]
     }
    ],
    "source": [
-    "x = torch.unsqueeze(x, 0)\n",
-    "x.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
-   "id": "f9fafed6",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "torch.Size([1, 1280])"
-      ]
-     },
-     "execution_count": 20,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "res = model(x.to(device).float())\n",
-    "res.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
-   "id": "276e4338",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[ 0.00396519, -0.03426354,  0.04282009, ..., -0.01117208,\n",
-       "        -0.008929  ,  0.0490795 ]], dtype=float32)"
-      ]
-     },
-     "execution_count": 22,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "res.detach().cpu().numpy()"
+    "for i in tqdm(range(len(dataset))):\n",
+    "    x, y, audio_id = dataset[i]\n",
+    "    x = torch.unsqueeze(x, 0)\n",
+    "    res = model(x.to(device).float())\n",
+    "    res = res.detach().cpu().numpy()\n",
+    "    np.save(os.path.join('/home/kvu/erc/Datasets/MELD/audio-features/test', audio_id + '.npy'), res)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9e7c88ed",
+   "id": "d8a3b63e",
    "metadata": {},
    "outputs": [],
    "source": []
