add: context-aware dataloader

--- a/train_multimodal.ipynb
+++ b/train_multimodal.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "20706436",
+   "id": "c08e51f6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,39 +39,108 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "6413113c",
+   "id": "e5e23a3b",
    "metadata": {},
    "outputs": [],
    "source": [
-    "dataset = AudioTextFeatureVectorDataset(csv_path='/home/kvu/erc/data/raw-audios-wav/train.csv', \n",
-    "                                        audio_feat_dir='/home/kvu/erc/Datasets/MELD/audio-features/train', \n",
-    "                                        text_feat_dir='/home/kvu/erc/Datasets/MELD/text-features/train')"
+    "dataset = ContextAwareDataset(csv_path='/home/kvu/erc/data/raw-audios-wav/train.csv', \n",
+    "                              audio_feat_dir='/home/kvu/erc/Datasets/MELD/audio-features/train', \n",
+    "                              text_feat_dir='/home/kvu/erc/Datasets/MELD/text-features/train', \n",
+    "                              ordered_json_list='/home/kvu/erc/Datasets/MELD/utterance-ordered.json', \n",
+    "                              num_utt=8)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "cb2bbda1",
+   "id": "a711e143",
    "metadata": {},
    "outputs": [],
    "source": [
-    "x, y, z = dataset[0]"
+    "x, y = dataset[0]"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "a1da96ee",
+   "id": "126f4deb",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'tuple' object has no attribute 'shape'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-4-9f2b259887ef>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mx\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m: 'tuple' object has no attribute 'shape'"
+     ]
+    }
+   ],
+   "source": [
+    "x.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "5e3c6bd6",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[ 0.00396519, -0.03426354,  0.04282009, ..., -0.01117208,\n",
-       "        -0.008929  ,  0.0490795 ]], dtype=float32)"
+       "()"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "8118ac0f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(array([[ 0.        ,  0.        ,  0.        , ...,  0.        ,\n",
+       "          0.        ,  0.        ],\n",
+       "        [ 0.        ,  0.        ,  0.        , ...,  0.        ,\n",
+       "          0.        ,  0.        ],\n",
+       "        [ 0.        ,  0.        ,  0.        , ...,  0.        ,\n",
+       "          0.        ,  0.        ],\n",
+       "        ...,\n",
+       "        [ 0.02184726, -0.07112872,  0.04204887, ...,  0.0137796 ,\n",
+       "          0.04377559,  0.01769327],\n",
+       "        [-0.00524412, -0.10400894,  0.05761228, ..., -0.00752982,\n",
+       "          0.02424178, -0.02397549],\n",
+       "        [ 0.00396519, -0.03426354,  0.04282009, ..., -0.01117208,\n",
+       "         -0.008929  ,  0.0490795 ]]),\n",
+       " array([[ 0.        ,  0.        ,  0.        , ...,  0.        ,\n",
+       "          0.        ,  0.        ],\n",
+       "        [ 0.        ,  0.        ,  0.        , ...,  0.        ,\n",
+       "          0.        ,  0.        ],\n",
+       "        [ 0.        ,  0.        ,  0.        , ...,  0.        ,\n",
+       "          0.        ,  0.        ],\n",
+       "        ...,\n",
+       "        [ 0.02826956, -0.22568929,  0.01267715, ..., -0.73909378,\n",
+       "          0.66344625, -0.24826191],\n",
+       "        [-0.22423574,  0.68814319, -0.05662324, ..., -0.42479214,\n",
+       "         -0.06326859,  0.63104254],\n",
+       "        [-0.23044853,  0.02680825,  0.20892724, ..., -0.80662245,\n",
+       "          0.64686573, -0.38935587]]))"
+      ]
+     },
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -82,18 +151,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "9c453eae",
+   "execution_count": 7,
+   "id": "35b44463",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[-0.23044853,  0.02680825,  0.20892724, ..., -0.80662245,\n",
-       "         0.6468657 , -0.38935587]], dtype=float32)"
+       "1"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -104,8 +172,87 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 8,
+   "id": "10e2d27e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dataset_loader = DataLoader(dataset=dataset, batch_size=8, shuffle=False, pin_memory=False) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "682626a3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x, y = next(iter(dataset_loader))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "f1268a04",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "audio, text = x"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "f349052d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[ 0.0000,  0.0000,  0.0000,  ...,  0.0000,  0.0000,  0.0000],\n",
+       "        [ 0.0000,  0.0000,  0.0000,  ...,  0.0000,  0.0000,  0.0000],\n",
+       "        [ 0.0000,  0.0000,  0.0000,  ...,  0.0000,  0.0000,  0.0000],\n",
+       "        ...,\n",
+       "        [ 0.0218, -0.0711,  0.0420,  ...,  0.0138,  0.0438,  0.0177],\n",
+       "        [-0.0052, -0.1040,  0.0576,  ..., -0.0075,  0.0242, -0.0240],\n",
+       "        [ 0.0040, -0.0343,  0.0428,  ..., -0.0112, -0.0089,  0.0491]],\n",
+       "       dtype=torch.float64)"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "audio[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "88fb3cfd",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.Size([8, 8, 1024])"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "text.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "5c28cc12",
+   "id": "2d43f2ea",
    "metadata": {},
    "outputs": [],
    "source": []
