--- a/train_multimodal.ipynb
+++ b/train_multimodal.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "c08e51f6",
+   "id": "4c6f0eed",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +39,19 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "e5e23a3b",
+   "id": "7044e029",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dev_id = 'cuda:0' \\\n",
+    "    if torch.cuda.is_available() else 'cpu'\n",
+    "device = torch.device(dev_id)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "cfc7d5e6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,133 +59,13 @@
     "                              audio_feat_dir='/home/kvu/erc/Datasets/MELD/audio-features/train', \n",
     "                              text_feat_dir='/home/kvu/erc/Datasets/MELD/text-features/train', \n",
     "                              ordered_json_list='/home/kvu/erc/Datasets/MELD/utterance-ordered.json', \n",
-    "                              num_utt=8)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "id": "a711e143",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "x, y = dataset[0]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "id": "126f4deb",
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "AttributeError",
-     "evalue": "'tuple' object has no attribute 'shape'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-4-9f2b259887ef>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mx\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m: 'tuple' object has no attribute 'shape'"
-     ]
-    }
-   ],
-   "source": [
-    "x.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "id": "5e3c6bd6",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "()"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "y.shape"
+    "                              num_utt=8, dataset='train')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "8118ac0f",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(array([[ 0.        ,  0.        ,  0.        , ...,  0.        ,\n",
-       "          0.        ,  0.        ],\n",
-       "        [ 0.        ,  0.        ,  0.        , ...,  0.        ,\n",
-       "          0.        ,  0.        ],\n",
-       "        [ 0.        ,  0.        ,  0.        , ...,  0.        ,\n",
-       "          0.        ,  0.        ],\n",
-       "        ...,\n",
-       "        [ 0.02184726, -0.07112872,  0.04204887, ...,  0.0137796 ,\n",
-       "          0.04377559,  0.01769327],\n",
-       "        [-0.00524412, -0.10400894,  0.05761228, ..., -0.00752982,\n",
-       "          0.02424178, -0.02397549],\n",
-       "        [ 0.00396519, -0.03426354,  0.04282009, ..., -0.01117208,\n",
-       "         -0.008929  ,  0.0490795 ]]),\n",
-       " array([[ 0.        ,  0.        ,  0.        , ...,  0.        ,\n",
-       "          0.        ,  0.        ],\n",
-       "        [ 0.        ,  0.        ,  0.        , ...,  0.        ,\n",
-       "          0.        ,  0.        ],\n",
-       "        [ 0.        ,  0.        ,  0.        , ...,  0.        ,\n",
-       "          0.        ,  0.        ],\n",
-       "        ...,\n",
-       "        [ 0.02826956, -0.22568929,  0.01267715, ..., -0.73909378,\n",
-       "          0.66344625, -0.24826191],\n",
-       "        [-0.22423574,  0.68814319, -0.05662324, ..., -0.42479214,\n",
-       "         -0.06326859,  0.63104254],\n",
-       "        [-0.23044853,  0.02680825,  0.20892724, ..., -0.80662245,\n",
-       "          0.64686573, -0.38935587]]))"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "x"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "id": "35b44463",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "1"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "y"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "id": "10e2d27e",
+   "id": "7e83e7f1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -182,18 +74,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "682626a3",
+   "execution_count": 7,
+   "id": "21dec6cb",
    "metadata": {},
    "outputs": [],
    "source": [
-    "x, y = next(iter(dataset_loader))"
+    "x, y = next(iter(dataset_loader))\n",
+    "# x = move_to(x, device)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "id": "f1268a04",
+   "execution_count": 8,
+   "id": "8382018c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -202,8 +95,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "id": "f349052d",
+   "execution_count": 9,
+   "id": "3af6f3d3",
    "metadata": {},
    "outputs": [
     {
@@ -219,7 +112,7 @@
        "       dtype=torch.float64)"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -230,8 +123,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "id": "88fb3cfd",
+   "execution_count": 10,
+   "id": "11ee050d",
    "metadata": {},
    "outputs": [
     {
@@ -240,7 +133,7 @@
        "torch.Size([8, 8, 1024])"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -251,8 +144,161 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 11,
+   "id": "fe6e42f0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import torch\n",
+    "import torch.nn as nn\n",
+    "import torch.nn.functional as F\n",
+    "\n",
+    "class FusionModel(nn.Module):\n",
+    "    def __init__(self, num_classes, AUDIO_FEAT_DIM=1280, TEXT_FEAT_DIM=1024):\n",
+    "        super().__init__()\n",
+    "        self.AUDIO_FEAT_DIM = AUDIO_FEAT_DIM\n",
+    "        self.TEXT_FEAT_DIM = TEXT_FEAT_DIM\n",
+    "        self.mbp = MBP(AUDIO_FEAT_DIM, TEXT_FEAT_DIM)\n",
+    "        self.classifier = nn.Sequential(\n",
+    "            nn.Linear(1000, 512),\n",
+    "            # nn.Linear(AUDIO_FEAT_DIM + TEXT_FEAT_DIM, 512),\n",
+    "            nn.Dropout(0.2),\n",
+    "            nn.BatchNorm1d(512),\n",
+    "            nn.ReLU(),\n",
+    "            nn.Dropout(0.2),\n",
+    "            nn.Linear(512, num_classes),\n",
+    "        )\n",
+    "        self.fc = nn.Linear(1000, num_classes)\n",
+    "\n",
+    "    def forward(self, inp):\n",
+    "        audio_feats, text_feats = inp\n",
+    "        batch_size, num_utt, _ = audio_feats.shape\n",
+    "        res = torch.zeros(size=(batch_size, num_utt, 1000))\n",
+    "        for i in range(batch_size):\n",
+    "            audio_feat = audio_feats[i].float()\n",
+    "            text_feat = text_feats[i].float()\n",
+    "            fused = self.mbp(audio_feat, text_feat)\n",
+    "            print(fused.shape)\n",
+    "            res[i] = fused\n",
+    "        return res\n",
+    "\n",
+    "class MBP(nn.Module):\n",
+    "    \"\"\"\n",
+    "        Multi-modal Factorized Bilinear Pooling - https://arxiv.org/pdf/1708.01471.pdf\n",
+    "    \"\"\"\n",
+    "    def __init__(self, AUDIO_FEAT_DIM, TEXT_FEAT_DIM, SUM_POOLING_WINDOW=3, OUTPUT_DIM=1000):\n",
+    "        super().__init__()\n",
+    "        self.AUDIO_FEAT_DIM = AUDIO_FEAT_DIM\n",
+    "        self.TEXT_FEAT_DIM = TEXT_FEAT_DIM\n",
+    "        self.SUM_POOLING_WINDOW = SUM_POOLING_WINDOW\n",
+    "        self.OUTPUT_DIM = OUTPUT_DIM\n",
+    "        self.FUSED_DIM = SUM_POOLING_WINDOW * OUTPUT_DIM\n",
+    "\n",
+    "        self.audio_linear_projection = nn.Linear(AUDIO_FEAT_DIM, self.FUSED_DIM)\n",
+    "        self.text_linear_projection = nn.Linear(TEXT_FEAT_DIM, self.FUSED_DIM)\n",
+    "        self.dropout = nn.Dropout(0.1)\n",
+    "\n",
+    "    def forward(self, audio, text):\n",
+    "        x = self.audio_linear_projection(audio)\n",
+    "        y = self.text_linear_projection(text)\n",
+    "        z = torch.mul(x, y)\n",
+    "        z = self.dropout(z)\n",
+    "        z = z.view(-1, 1, self.OUTPUT_DIM, self.SUM_POOLING_WINDOW)\n",
+    "        z = torch.sum(z, dim=3)\n",
+    "        z = torch.squeeze(z)\n",
+    "        z = torch.sqrt(F.relu(z)) - torch.sqrt(F.relu(-z))\n",
+    "        z = F.normalize(z)\n",
+    "        return z"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "75a3f0a8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fusion = FusionModel(num_classes=7)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "4627f14e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "torch.Size([8, 1000])\n",
+      "torch.Size([8, 1000])\n",
+      "torch.Size([8, 1000])\n",
+      "torch.Size([8, 1000])\n",
+      "torch.Size([8, 1000])\n",
+      "torch.Size([8, 1000])\n",
+      "torch.Size([8, 1000])\n",
+      "torch.Size([8, 1000])\n"
+     ]
+    }
+   ],
+   "source": [
+    "res = fusion(x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "0a8b8c6d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.Size([8, 8, 1000])"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "res.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "b825060f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[-0.0495,  0.0227, -0.0216,  ..., -0.0345, -0.0199,  0.0252],\n",
+       "        [-0.0409,  0.0411,  0.0243,  ...,  0.0335, -0.0117,  0.0170],\n",
+       "        [ 0.0202,  0.0652,  0.0254,  ...,  0.0331,  0.0056, -0.0263],\n",
+       "        ...,\n",
+       "        [-0.0132, -0.0082, -0.0351,  ...,  0.0141, -0.0455, -0.0116],\n",
+       "        [ 0.0148,  0.0291, -0.0170,  ...,  0.0412, -0.0304, -0.0283],\n",
+       "        [ 0.0380,  0.0259,  0.0147,  ...,  0.0206,  0.0020,  0.0341]],\n",
+       "       grad_fn=<SliceBackward>)"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "res[:, -1, :] # Pick the last vector"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "2d43f2ea",
+   "id": "d0fbbbca",
    "metadata": {},
    "outputs": [],
    "source": []
