--- a/train_notebook.ipynb
+++ b/train_notebook.ipynb
@@ -3,14 +3,37 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "a13e65c1",
+   "id": "cd8f8fb3",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Failed to initialize NVML: Driver/library version mismatch\n"
+      "Tue Apr 20 22:53:40 2021       \n",
+      "+-----------------------------------------------------------------------------+\n",
+      "| NVIDIA-SMI 460.56       Driver Version: 460.56       CUDA Version: 11.2     |\n",
+      "|-------------------------------+----------------------+----------------------+\n",
+      "| GPU  Name        Persistence-M| Bus-Id        Disp.A | Volatile Uncorr. ECC |\n",
+      "| Fan  Temp  Perf  Pwr:Usage/Cap|         Memory-Usage | GPU-Util  Compute M. |\n",
+      "|                               |                      |               MIG M. |\n",
+      "|===============================+======================+======================|\n",
+      "|   0  GeForce GTX 1050    Off  | 00000000:01:00.0 Off |                  N/A |\n",
+      "| N/A   51C    P0    N/A /  N/A |   1335MiB /  4042MiB |      0%      Default |\n",
+      "|                               |                      |                  N/A |\n",
+      "+-------------------------------+----------------------+----------------------+\n",
+      "                                                                               \n",
+      "+-----------------------------------------------------------------------------+\n",
+      "| Processes:                                                                  |\n",
+      "|  GPU   GI   CI        PID   Type   Process name                  GPU Memory |\n",
+      "|        ID   ID                                                   Usage      |\n",
+      "|=============================================================================|\n",
+      "|    0   N/A  N/A      1051      G   /usr/lib/xorg/Xorg                199MiB |\n",
+      "|    0   N/A  N/A      1416      G   /usr/bin/gnome-shell               55MiB |\n",
+      "|    0   N/A  N/A      2961      G   ...AAAAAAAAA= --shared-files      245MiB |\n",
+      "|    0   N/A  N/A      3498      G   ...AAAAAAAA== --shared-files       37MiB |\n",
+      "|    0   N/A  N/A     32199      C   .../kvu/erc/venv/bin/python3      793MiB |\n",
+      "+-----------------------------------------------------------------------------+\n"
      ]
     }
    ],
@@ -21,7 +44,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "ab869a8e",
+   "id": "1a560b73",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +54,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b16d4cf8",
+   "id": "102ff04a",
    "metadata": {},
    "outputs": [
     {
@@ -41,7 +64,7 @@
       "{ 'dataset': { 'train': { 'args': { 'audio_feat_dir': 'Datasets/MELD/audio-features/train/',\n",
       "                                    'csv_path': 'data/raw-audios-wav/train.csv',\n",
       "                                    'dataset': 'train',\n",
-      "                                    'num_utt': 2,\n",
+      "                                    'num_utt': 10,\n",
       "                                    'ordered_json_list': 'Datasets/MELD/utterance-ordered.json',\n",
       "                                    'text_feat_dir': 'Datasets/MELD/text-features/train/'},\n",
       "                          'loader': { 'args': { 'batch_size': 8,\n",
@@ -49,12 +72,12 @@
       "                                                'shuffle': True},\n",
       "                                      'name': 'DataLoader'},\n",
       "                          'name': 'ContextAwareDataset'},\n",
-      "               'val': { 'args': { 'audio_feat_dir': 'Datasets/MELD/audio-features/val/',\n",
-      "                                  'csv_path': 'data/raw-audios-wav/val.csv',\n",
-      "                                  'dataset': 'val',\n",
-      "                                  'num_utt': 2,\n",
+      "               'val': { 'args': { 'audio_feat_dir': 'Datasets/MELD/audio-features/test/',\n",
+      "                                  'csv_path': 'data/raw-audios-wav/test.csv',\n",
+      "                                  'dataset': 'test',\n",
+      "                                  'num_utt': 10,\n",
       "                                  'ordered_json_list': 'Datasets/MELD/utterance-ordered.json',\n",
-      "                                  'text_feat_dir': 'Datasets/MELD/text-features/val/'},\n",
+      "                                  'text_feat_dir': 'Datasets/MELD/text-features/test/'},\n",
       "                        'loader': { 'args': { 'batch_size': 8,\n",
       "                                              'drop_last': True,\n",
       "                                              'shuffle': True},\n",
@@ -63,57 +86,89 @@
       "  'debug': False,\n",
       "  'gpus': '0',\n",
       "  'id': 'context_aware_multimodal_fusion',\n",
-      "  'loss': { 'args': {'alpha': 0.75, 'gamma': 2, 'reduce': True},\n",
+      "  'loss': { 'args': {'alpha': 0.75, 'gamma': 3, 'reduce': True},\n",
       "            'name': 'FocalLoss'},\n",
       "  'metric': [{'args': None, 'name': 'F1Weighted'}],\n",
       "  'model': { 'args': { 'AUDIO_FEAT_DIM': 1280,\n",
-      "                       'EMB_DIM': 2304,\n",
+      "                       'EMB_DIM': 256,\n",
       "                       'TEXT_FEAT_DIM': 1024,\n",
       "                       'num_classes': 7,\n",
-      "                       'use_concat': True},\n",
+      "                       'use_concat': False},\n",
       "             'name': 'ContextAwareModel'},\n",
-      "  'optimizer': {'args': {'lr': 0.0001}, 'name': 'Adam'},\n",
+      "  'optimizer': {'args': {'lr': 3e-05}, 'name': 'Adam'},\n",
       "  'pretrained': None,\n",
-      "  'scheduler': { 'args': {'gamma': 0.1, 'last_epoch': -1, 'step_size': 3},\n",
+      "  'scheduler': { 'args': {'gamma': 0.2, 'last_epoch': -1, 'step_size': 1},\n",
       "                 'name': 'StepLR'},\n",
-      "  'trainer': {'log_step': 1, 'nepochs': 3, 'val_step': 1}}\n",
+      "  'trainer': {'log_step': 1, 'nepochs': 10, 'val_step': 1}}\n",
       "\n",
       "Epoch   0\n",
       "-----------------------------------\n",
       "Training........\n",
-      "100%|███████████████████████████████████████| 1248/1248 [10:00<00:00,  2.08it/s]\n",
+      "100%|███████████████████████████████████████| 1248/1248 [08:44<00:00,  2.38it/s]\n",
       "+ Training result\n",
-      "Loss: 0.2714930995347789\n",
-      "F1 weighted: 0.71135054414843\n",
+      "Loss: 0.2334154361583504\n",
+      "F1 weighted: 0.6837093509011979\n",
       "Evaluating........\n",
-      "100%|█████████████████████████████████████████| 138/138 [00:07<00:00, 19.47it/s]\n",
+      "100%|█████████████████████████████████████████| 326/326 [00:38<00:00,  8.57it/s]\n",
       "+ Evaluation result\n",
-      "Loss: 0.40632481109418406\n",
-      "F1 weighted: 0.6309049738146923\n",
+      "Loss: 0.3614985003661754\n",
+      "F1 weighted: 0.632131937470482\n",
       "-----------------------------------\n",
-      "Loss is improved from  inf to  0.406325. Saving weights...\n",
-      "F1Weighted is improved from  0.000000 to  0.630905. Saving weights...\n",
+      "Loss is improved from  inf to  0.361499. Saving weights...\n",
+      "F1Weighted is improved from  0.000000 to  0.632132. Saving weights...\n",
       "\n",
       "Epoch   1\n",
       "-----------------------------------\n",
       "Training........\n",
-      "100%|███████████████████████████████████████| 1248/1248 [10:26<00:00,  1.99it/s]\n",
+      "100%|███████████████████████████████████████| 1248/1248 [08:52<00:00,  2.35it/s]\n",
       "+ Training result\n",
-      "Loss: 0.23138903948114245\n",
-      "F1 weighted: 0.7363524538162989\n",
+      "Loss: 0.15758974189593106\n",
+      "F1 weighted: 0.728335452847984\n",
       "Evaluating........\n",
-      "100%|█████████████████████████████████████████| 138/138 [00:07<00:00, 19.48it/s]\n",
+      "100%|█████████████████████████████████████████| 326/326 [00:40<00:00,  8.00it/s]\n",
       "+ Evaluation result\n",
-      "Loss: 0.4678032543928618\n",
-      "F1 weighted: 0.5825225272781078\n",
+      "Loss: 0.2642717924771794\n",
+      "F1 weighted: 0.6527945072004746\n",
       "-----------------------------------\n",
-      "Loss is not improved from 0.406325.\n",
-      "F1Weighted is not improved from 0.630905.\n",
+      "Loss is improved from  0.361499 to  0.264272. Saving weights...\n",
+      "F1Weighted is improved from  0.632132 to  0.652795. Saving weights...\n",
       "\n",
       "Epoch   2\n",
       "-----------------------------------\n",
       "Training........\n",
-      " 20%|███████▉                                | 249/1248 [02:06<08:29,  1.96it/s]"
+      "100%|███████████████████████████████████████| 1248/1248 [08:35<00:00,  2.42it/s]\n",
+      "+ Training result\n",
+      "Loss: 0.14712751224059928\n",
+      "F1 weighted: 0.7416711687067126\n",
+      "Evaluating........\n",
+      "100%|█████████████████████████████████████████| 326/326 [00:38<00:00,  8.54it/s]\n",
+      "+ Evaluation result\n",
+      "Loss: 0.4388840119877135\n",
+      "F1 weighted: 0.5988972079523412\n",
+      "-----------------------------------\n",
+      "Loss is not improved from 0.264272.\n",
+      "F1Weighted is not improved from 0.652795.\n",
+      "\n",
+      "Epoch   3\n",
+      "-----------------------------------\n",
+      "Training........\n",
+      "100%|███████████████████████████████████████| 1248/1248 [08:20<00:00,  2.49it/s]\n",
+      "+ Training result\n",
+      "Loss: 0.1402100994090082\n",
+      "F1 weighted: 0.75601360641179\n",
+      "Evaluating........\n",
+      "100%|█████████████████████████████████████████| 326/326 [00:38<00:00,  8.54it/s]\n",
+      "+ Evaluation result\n",
+      "Loss: 0.32476455892160866\n",
+      "F1 weighted: 0.6148962410826244\n",
+      "-----------------------------------\n",
+      "Loss is not improved from 0.264272.\n",
+      "F1Weighted is not improved from 0.652795.\n",
+      "\n",
+      "Epoch   4\n",
+      "-----------------------------------\n",
+      "Training........\n",
+      " 20%|████████                                | 253/1248 [01:42<06:22,  2.60it/s]"
      ]
     }
    ],
@@ -123,7 +178,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1ebe334b",
+   "id": "176877e1",
    "metadata": {},
    "source": [
     "## Tensorboard"
@@ -132,7 +187,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f85c44e4",
+   "id": "7b576b84",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -143,7 +198,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b63e8ed9",
+   "id": "a093f63c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -153,7 +208,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f3260de4",
+   "id": "526a136e",
    "metadata": {},
    "outputs": [],
    "source": []
