--- a/huggingface-results/results.ipynb
+++ b/huggingface-results/results.ipynb
@@ -2,8 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 159,
-   "id": "1a2f6579",
+   "execution_count": 9,
+   "id": "99248d41",
    "metadata": {},
    "outputs": [
     {
@@ -44,9 +44,21 @@
       "----------------------------------------\n",
       "----------------------------------------\n",
       "[{'DATASET': 'IEMOCAP',\n",
-      "  'eval_loss': 0.9774336814880371,\n",
-      "  'num_future_utterances': 32,\n",
-      "  'num_past_utterances': 32,\n",
+      "  'eval_loss': 0.9510225653648376,\n",
+      "  'num_future_utterances': 8,\n",
+      "  'num_past_utterances': 8,\n",
+      "  'roberta': 'roberta-base',\n",
+      "  'speaker_mode': 'upper'},\n",
+      " {'DATASET': 'IEMOCAP',\n",
+      "  'eval_loss': 0.9651377201080322,\n",
+      "  'num_future_utterances': 4,\n",
+      "  'num_past_utterances': 4,\n",
+      "  'roberta': 'roberta-base',\n",
+      "  'speaker_mode': 'upper'},\n",
+      " {'DATASET': 'IEMOCAP',\n",
+      "  'eval_loss': 1.0071192979812622,\n",
+      "  'num_future_utterances': 16,\n",
+      "  'num_past_utterances': 16,\n",
       "  'roberta': 'roberta-base',\n",
       "  'speaker_mode': 'upper'},\n",
       " {'DATASET': 'IEMOCAP',\n",
@@ -60,19 +72,7 @@
       "  'num_future_utterances': 2,\n",
       "  'num_past_utterances': 2,\n",
       "  'roberta': 'roberta-base',\n",
-      "  'speaker_mode': 'title'},\n",
-      " {'DATASET': 'IEMOCAP',\n",
-      "  'eval_loss': 1.0483901500701904,\n",
-      "  'num_future_utterances': 2,\n",
-      "  'num_past_utterances': 2,\n",
-      "  'roberta': 'roberta-base',\n",
-      "  'speaker_mode': 'upper'},\n",
-      " {'DATASET': 'IEMOCAP',\n",
-      "  'eval_loss': 1.055590271949768,\n",
-      "  'num_future_utterances': 1,\n",
-      "  'num_past_utterances': 2,\n",
-      "  'roberta': 'roberta-base',\n",
-      "  'speaker_mode': 'upper'}]\n",
+      "  'speaker_mode': 'title'}]\n",
       "----------------------------------------\n",
       "----------------------------------------\n",
       "[{'DATASET': 'EmoryNLP',\n",
@@ -201,7 +201,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "762f44d1",
+   "id": "fc936b19",
    "metadata": {},
    "outputs": [],
    "source": []
