--- a/huggingface-results/results.ipynb
+++ b/huggingface-results/results.ipynb
@@ -2,8 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "99248d41",
+   "execution_count": 1,
+   "id": "b5c8ea5d",
    "metadata": {},
    "outputs": [
     {
@@ -28,19 +28,7 @@
       "  'num_future_utterances': 2,\n",
       "  'num_past_utterances': 0,\n",
       "  'roberta': 'roberta-base',\n",
-      "  'speaker_mode': 'title'},\n",
-      " {'DATASET': 'MELD',\n",
-      "  'eval_loss': 1.3212932348251343,\n",
-      "  'num_future_utterances': 0,\n",
-      "  'num_past_utterances': 4,\n",
-      "  'roberta': 'roberta-base',\n",
-      "  'speaker_mode': 'upper'},\n",
-      " {'DATASET': 'MELD',\n",
-      "  'eval_loss': 1.3371278047561646,\n",
-      "  'num_future_utterances': 0,\n",
-      "  'num_past_utterances': 0,\n",
-      "  'roberta': 'roberta-base',\n",
-      "  'speaker_mode': 'None'}]\n",
+      "  'speaker_mode': 'title'}]\n",
       "----------------------------------------\n",
       "----------------------------------------\n",
       "[{'DATASET': 'IEMOCAP',\n",
@@ -60,19 +48,7 @@
       "  'num_future_utterances': 16,\n",
       "  'num_past_utterances': 16,\n",
       "  'roberta': 'roberta-base',\n",
-      "  'speaker_mode': 'upper'},\n",
-      " {'DATASET': 'IEMOCAP',\n",
-      "  'eval_loss': 1.01212477684021,\n",
-      "  'num_future_utterances': 32,\n",
-      "  'num_past_utterances': 32,\n",
-      "  'roberta': 'roberta-base',\n",
-      "  'speaker_mode': 'upper'},\n",
-      " {'DATASET': 'IEMOCAP',\n",
-      "  'eval_loss': 1.0190848112106323,\n",
-      "  'num_future_utterances': 2,\n",
-      "  'num_past_utterances': 2,\n",
-      "  'roberta': 'roberta-base',\n",
-      "  'speaker_mode': 'title'}]\n",
+      "  'speaker_mode': 'upper'}]\n",
       "----------------------------------------\n",
       "----------------------------------------\n",
       "[{'DATASET': 'EmoryNLP',\n",
@@ -91,18 +67,6 @@
       "  'eval_loss': 1.6587024927139282,\n",
       "  'num_future_utterances': 0,\n",
       "  'num_past_utterances': 0,\n",
-      "  'roberta': 'roberta-base',\n",
-      "  'speaker_mode': 'upper'},\n",
-      " {'DATASET': 'EmoryNLP',\n",
-      "  'eval_loss': 1.6647984981536865,\n",
-      "  'num_future_utterances': 1,\n",
-      "  'num_past_utterances': 0,\n",
-      "  'roberta': 'roberta-base',\n",
-      "  'speaker_mode': 'title'},\n",
-      " {'DATASET': 'EmoryNLP',\n",
-      "  'eval_loss': 1.675121545791626,\n",
-      "  'num_future_utterances': 0,\n",
-      "  'num_past_utterances': 2,\n",
       "  'roberta': 'roberta-base',\n",
       "  'speaker_mode': 'upper'}]\n",
       "----------------------------------------\n",
@@ -124,19 +88,7 @@
       "  'num_future_utterances': 0,\n",
       "  'num_past_utterances': 0,\n",
       "  'roberta': 'roberta-base',\n",
-      "  'speaker_mode': 'None'},\n",
-      " {'DATASET': 'DailyDialog',\n",
-      "  'eval_loss': 0.4046725332736969,\n",
-      "  'num_future_utterances': 0,\n",
-      "  'num_past_utterances': 1,\n",
-      "  'roberta': 'roberta-base',\n",
-      "  'speaker_mode': 'upper'},\n",
-      " {'DATASET': 'DailyDialog',\n",
-      "  'eval_loss': 0.41032326221466064,\n",
-      "  'num_future_utterances': 1,\n",
-      "  'num_past_utterances': 1,\n",
-      "  'roberta': 'roberta-base',\n",
-      "  'speaker_mode': 'title'}]\n",
+      "  'speaker_mode': 'None'}]\n",
       "----------------------------------------\n"
      ]
     }
@@ -188,7 +140,7 @@
     "hp_results = [merge_two_dicts(foo[0], foo[1]) for foo in hp_results]\n",
     "\n",
     "\n",
-    "top_k = 5\n",
+    "top_k = 3\n",
     "roberta = 'roberta-base'\n",
     "for DATASET in ['MELD', 'IEMOCAP', 'EmoryNLP', 'DailyDialog']:\n",
     "    stats = return_sorted(hp_results, DATASET, roberta)[:top_k]    \n",
@@ -201,7 +153,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fc936b19",
+   "id": "344659d4",
    "metadata": {},
    "outputs": [],
    "source": []
