done, ready for paper

--- a/notebooks/training-results-fp16-batched.ipynb
+++ b/notebooks/training-results-fp16-batched.ipynb
@@ -2,7 +2,25 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
+   "id": "f0a04b5c-80bb-413c-998f-2f442c96e456",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/home/tk/repos/erc/results\n"
+     ]
+    }
+   ],
+   "source": [
+    "%cd /home/tk/repos/erc/results"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "id": "2619a3d4",
    "metadata": {},
    "outputs": [],
@@ -105,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 3,
    "id": "a10c8838",
    "metadata": {},
    "outputs": [
@@ -130,27 +148,27 @@
       "  'eval_loss': (1.2878952741622924, 5)},\n",
       " {'test_f1_macro': (0.5431934834368952, 5),\n",
       "  'test_f1_micro': (0.5637484586929716, 5),\n",
-      "  'test_f1_weighted': (0.560872794884953, 5),\n",
+      "  'test_f1_weighted': (0.5608727948849529, 5),\n",
       "  'test_loss': (1.3399529695510863, 5)})\n",
       "\n",
       "DATASET: IEMOCAP, roberta: roberta-large, speaker_mode: upper, num_past_utterances: 0, num_future_utterances: 1000, 2021-05-09-15-16-25\n",
-      "({'eval_f1_macro': (0.6396472234317584, 5),\n",
+      "({'eval_f1_macro': (0.6396472234317585, 5),\n",
       "  'eval_f1_micro': (0.6495918367346938, 5),\n",
       "  'eval_f1_weighted': (0.6504960283305034, 5),\n",
       "  'eval_loss': (1.8104423761367798, 5)},\n",
       " {'test_f1_macro': (0.6453711024980999, 5),\n",
-      "  'test_f1_micro': (0.6674475955610358, 5),\n",
+      "  'test_f1_micro': (0.6674475955610357, 5),\n",
       "  'test_f1_weighted': (0.6656272077776554, 5),\n",
       "  'test_loss': (1.6912848472595214, 5)})\n",
       "\n",
       "DATASET: IEMOCAP, roberta: roberta-large, speaker_mode: upper, num_past_utterances: 1000, num_future_utterances: 0, 2021-05-09-12-19-54\n",
       "({'eval_f1_macro': (0.6597466866669253, 5),\n",
       "  'eval_f1_micro': (0.6693877551020408, 5),\n",
-      "  'eval_f1_weighted': (0.6666148556427562, 5),\n",
+      "  'eval_f1_weighted': (0.6666148556427564, 5),\n",
       "  'eval_loss': (1.3905875444412232, 5)},\n",
       " {'test_f1_macro': (0.6689570035188008, 5),\n",
       "  'test_f1_micro': (0.6871763255240444, 5),\n",
-      "  'test_f1_weighted': (0.6856809139267019, 5),\n",
+      "  'test_f1_weighted': (0.6856809139267018, 5),\n",
       "  'test_loss': (1.259392774105072, 5)})\n",
       "\n",
       "DATASET: IEMOCAP, roberta: roberta-large, speaker_mode: upper, num_past_utterances: 1000, num_future_utterances: 1000, 2021-05-08-16-15-19\n",
@@ -163,24 +181,14 @@
       "  'test_f1_weighted': (0.6741956238807851, 5),\n",
       "  'test_loss': (0.9940088391304016, 5)})\n",
       "\n",
-      "DATASET: IEMOCAP, roberta: roberta-large, speaker_mode: upper, num_past_utterances: 1000, num_future_utterances: 1000, 2021-05-10-14-17-40\n",
-      "({'eval_f1_macro': (0.6157307264016488, 5),\n",
-      "  'eval_f1_micro': (0.6383673469387755, 5),\n",
-      "  'eval_f1_weighted': (0.6407734602221794, 5),\n",
-      "  'eval_loss': (1.2530731439590455, 5)},\n",
-      " {'test_f1_macro': (0.656226505036573, 5),\n",
-      "  'test_f1_micro': (0.6731196054254008, 5),\n",
-      "  'test_f1_weighted': (0.6732943677874472, 5),\n",
-      "  'test_loss': (1.1020672798156739, 5)})\n",
-      "\n",
       "DATASET: MELD, roberta: roberta-large, speaker_mode: None, num_past_utterances: 0, num_future_utterances: 0, 2021-05-09-10-34-30\n",
-      "({'eval_f1_macro': (0.4976953013397728, 5),\n",
+      "({'eval_f1_macro': (0.49769530133977274, 5),\n",
       "  'eval_f1_micro': (0.6445446348061317, 5),\n",
       "  'eval_f1_weighted': (0.6310382873181728, 5),\n",
       "  'eval_loss': (1.0687896013259888, 5)},\n",
-      " {'test_f1_macro': (0.47117028400269223, 5),\n",
+      " {'test_f1_macro': (0.4711702840026922, 5),\n",
       "  'test_f1_micro': (0.6472030651340996, 5),\n",
-      "  'test_f1_weighted': (0.6374340068650504, 5),\n",
+      "  'test_f1_weighted': (0.6374340068650503, 5),\n",
       "  'test_loss': (1.0612706422805787, 5)})\n",
       "\n",
       "DATASET: MELD, roberta: roberta-large, speaker_mode: upper, num_past_utterances: 0, num_future_utterances: 0, 2021-05-09-09-46-30\n",
@@ -198,27 +206,27 @@
       "  'eval_f1_micro': (0.6503155996393147, 5),\n",
       "  'eval_f1_weighted': (0.6355222708985134, 5),\n",
       "  'eval_loss': (1.2762720584869385, 5)},\n",
-      " {'test_f1_macro': (0.4683521430057108, 5),\n",
-      "  'test_f1_micro': (0.6532567049808429, 5),\n",
-      "  'test_f1_weighted': (0.6422649707423743, 5),\n",
+      " {'test_f1_macro': (0.4683521430057107, 5),\n",
+      "  'test_f1_micro': (0.653256704980843, 5),\n",
+      "  'test_f1_weighted': (0.6422649707423742, 5),\n",
       "  'test_loss': (1.2563609838485719, 5)})\n",
       "\n",
       "DATASET: MELD, roberta: roberta-large, speaker_mode: upper, num_past_utterances: 1000, num_future_utterances: 0, 2021-05-09-18-15-01\n",
       "({'eval_f1_macro': (0.5335582959109558, 5),\n",
       "  'eval_f1_micro': (0.6643823264201985, 5),\n",
-      "  'eval_f1_weighted': (0.6567062929470664, 5),\n",
+      "  'eval_f1_weighted': (0.6567062929470665, 5),\n",
       "  'eval_loss': (1.695301079750061, 5)},\n",
-      " {'test_f1_macro': (0.48053775072370647, 5),\n",
-      "  'test_f1_micro': (0.6518007662835249, 5),\n",
+      " {'test_f1_macro': (0.4805377507237064, 5),\n",
+      "  'test_f1_micro': (0.651800766283525, 5),\n",
       "  'test_f1_weighted': (0.6455350975434817, 5),\n",
       "  'test_loss': (1.773275661468506, 5)})\n",
       "\n",
       "DATASET: MELD, roberta: roberta-large, speaker_mode: upper, num_past_utterances: 1000, num_future_utterances: 1000, 2021-05-08-19-57-31\n",
       "({'eval_f1_macro': (0.5556886436897545, 5),\n",
       "  'eval_f1_micro': (0.6815148782687106, 5),\n",
-      "  'eval_f1_weighted': (0.6739214836802829, 5),\n",
+      "  'eval_f1_weighted': (0.6739214836802828, 5),\n",
       "  'eval_loss': (1.2840325355529785, 5)},\n",
-      " {'test_f1_macro': (0.4887975394358694, 5),\n",
+      " {'test_f1_macro': (0.48879753943586934, 5),\n",
       "  'test_f1_micro': (0.6626819923371647, 5),\n",
       "  'test_f1_weighted': (0.6561223421668305, 5),\n",
       "  'test_loss': (1.3610458850860596, 5)})\n",
@@ -242,7 +250,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3bd78182",
+   "id": "a8329ce0-39c9-479d-9b26-44bf8e0299de",
    "metadata": {},
    "outputs": [],
    "source": []
