done, ready for paper

--- a/notebooks/model-test.ipynb
+++ b/notebooks/model-test.ipynb
@@ -61,11 +61,11 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2021-05-15 11:15:17.065 INFO utils - _load_utterance_ordered: every text file exists fine!\n",
-      "2021-05-15 11:15:17.065 INFO utils - _string2tokens: converting utterances into tokens ...\n",
-      "2021-05-15 11:15:17.066 INFO utils - _string2tokens: creating input utterance data ... \n",
-      "100%|██████████| 31/31 [00:01<00:00, 20.06it/s]\n",
-      "2021-05-15 11:15:21.063 INFO utils - _create_input: number of truncated utterances: 1131\n"
+      "2021-05-15 13:17:54.479 INFO utils - _load_utterance_ordered: every text file exists fine!\n",
+      "2021-05-15 13:17:54.480 INFO utils - _string2tokens: converting utterances into tokens ...\n",
+      "2021-05-15 13:17:54.482 INFO utils - _string2tokens: creating input utterance data ... \n",
+      "100%|██████████| 31/31 [00:01<00:00, 17.55it/s]\n",
+      "2021-05-15 13:17:58.716 INFO utils - _create_input: number of truncated utterances: 1131\n"
      ]
     }
    ],
@@ -97,6 +97,68 @@
     "#                          num_past_utterances=num_past_utterances, num_future_utterances=num_future_utterances,\n",
     "#                          model_checkpoint='roberta-large',\n",
     "#                          ROOT_DIR=ROOT_DIR, SEED=SEED)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "13889c69-c11a-488b-8f0f-a08b7e2cb413",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "foo = model.get_input_embeddings()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "3d19728a-61fc-4df6-8757-026bbf35a5d5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import torch"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "49aee747-25b1-4979-9f09-9b6d286fdcc1",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "foo.training"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "76b1f42e-9ad3-4da5-b98e-66a3b025a62b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[0., 0., 0.,  ..., 0., 0., 0.]], grad_fn=<EmbeddingBackward>)"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "foo(torch.tensor([1]))"
    ]
   },
   {
